Mirror snapshot